# patch-vsr-net

./: .gitignore  pyproject.toml
configs/: train-align-reds.yaml  train-align.yaml  train-align2.yaml  train-sisr-4x-gan.yaml  train-sisr-4x-single.yaml  train-vsr-2x-gan.yaml  train-vsr-2x.yaml  train-vsr-4x-gan.yaml  train-vsr-4x-with-lossless.yaml  train-vsr-4x.yaml
scripts/: compute_metrics.py  main.py  upscale_seq.py  upscale_seq_srnet.py  upscale_seq_with_ll.py
src/archs/: align_net.py  arch_utils.py  patch_vsr_net.py  sr_net.py
src/archs/discriminator/: spatial_discr.py
src/data/: datamodule.py  folder_dataset.py
src/metrics/: metrics.py  metrics_utils.py  psnr_ssim.py
src/models/: align_net_module.py  align_only_module.py  sisr_gan_module.py  sisr_single_module.py  vsr_gan_module.py  vsr_single_module.py  vsr_with_ll_single_module.py
src/optim/: __init__.py  losses.py
src/utils/: color_utils.py  data_utils.py  lit_callbacks.py  mem_profiler.py
